Fix p wrap for IE 2

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   padding: 2.4em 2em;
   max-width: 100%;
+  -ms-overflow-x: hidden;
 }
 
 .about-container {
